Fix scrollbars

--- a/next/components/Layout/PageLayout.module.css
+++ b/next/components/Layout/PageLayout.module.css
@@ -2,13 +2,13 @@
   padding: 0 16px;
   display: flex;
   gap: 16px;
-  max-width: 100vw;
 }
 
 .tableOfContent {
   order: 1;
-  min-width: 360px;
-  max-width: 20vw;
+  width: 25%;
+  min-width: 250px;
+  max-width: 360px;
 }
 
 @media(max-width: 760px) {
